--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,37 @@ CTestTestfile.cmake
 
 build
 *.kdev4
+# Created by https://www.gitignore.io/api/matlab
+# Edit at https://www.gitignore.io/?templates=matlab
+
+### Matlab ###
+# Windows default autosave extension
+*.asv
+
+# OSX / *nix default autosave extension
+*.m~
+
+# Compiled MEX binaries (all platforms)
+*.mex*
+
+# Packaged app and toolbox files
+*.mlappinstall
+*.mltbx
+
+# Generated helpsearch folders
+helpsearch*/
+
+# Simulink code generation folders
+slprj/
+sccprj/
+
+# Matlab code generation folders
+codegen/
+
+# Simulink autosave extension
+*.autosave
+
+# Octave session info
+octave-workspace
+
+# End of https://www.gitignore.io/api/matlab
